--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,6 +1,7 @@
 html,
 body,
-p {
+p,
+h2 {
     margin: 0;
 }
 
@@ -37,6 +38,14 @@ h1 {
     margin: 0 0 0.5em 0;
     font-size: 3em;
     font-weight: 900;
+}
+
+h2 {
+    margin: 1em 0 0 0;
+    color: #f0c838;
+    font-size: 3em;
+    font-weight: 900;
+    text-shadow: 0.1em 0.1em 0.1em #0007;
 }
 
 p {
@@ -77,16 +86,73 @@ section:nth-of-type(1) {
     height: 30em;
     width: 100%;
     background-color: #000;
-
-    display: flex;
 }
 
-.posterPlaceholder {
-    width: 20em;
+ul {
+    margin: 0;
+    height: 30em;
+    display: flex;
+    list-style: none;
+    background-color: black;
+    overflow: scroll;
+}
+
+.movieInfo {
+    transition: 0.8s;
+}
+
+.hidden {
+    opacity: 0;
+}
+
+.visible {
+    opacity: 1;
+}
+
+#year {
+    margin: 0;
+    color: #fff5;
+}
+
+#plot {
+    width: 10em;
+    display: inline-block;
+}
+
+li p {
+    margin: 1em 0 0 0;
+}
+
+#imdbRating {
+    margin: 0;
+    color: #f0c838;
+    font-size: 3em;
+    font-weight: 900;
+    text-shadow: 0.1em 0.1em 0.1em #0007;
+}
+
+.moviePoster {
     height: 100%;
-    margin: 0 0 0 2em;
-    background-color: rgb(218, 198, 85);
+    margin: 0 1em 0 1em;
+    padding: 0 1em 0 1em;
+    text-align: end;
+    color: white;
+    text-shadow: 0.1em 0.1em 0.1em black;
+    background-color: #f0c838;
+    background-size: cover;
+
     border-radius: 1.2em;
+    cursor: pointer;
+
+    transition: 0.8s;
+}
+
+.regularPoster {
+    min-width: 21em;
+}
+
+.extendedPoster {
+    min-width: 31em;
 }
 
 footer {
