--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -18,20 +18,56 @@ body {
     background-color: #f0c838;
 }
 
+p {
+    font-size: 1.2em;
+    margin-bottom: 1em;
+}
+
 .introText {
     width: 25em;
     max-width: 100%;
-    margin-top: auto;
-    margin-bottom: auto;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.stephanInfo {
+    margin: 0 0 1em 0;
+    font-size: 1.2em;
+}
+
+.btn {
+    padding: 1em;
+    text-decoration: none;
+    color: #000;
+    width: 7em;
+    text-align: center;
+    outline: solid #000 .2em;
+
+    transition: .2s;
+}
+
+.btn:hover {
+    background-color: #000;
+    color: #f0c838;
+    font-weight: 900;
+}
+
+.btn:focus {
+    outline: solid #FFF .4em;
+    background-color: #000;
+    color: #f0c838;
+    font-weight: 900;
 }
 
 img:first-of-type {
-    margin: 0 3em 1em 0;
+    margin: auto 3em auto 0;
     width: 100%;
-    max-width: 20em;
-    height: 100%;
+    max-width: 25em;
 
-    background-color: white;
+    background-color: #000;
     box-shadow: 0.4em 0.4em 1em #0005;
 }
 
@@ -47,10 +83,6 @@ h2 {
     font-size: 2em;
     font-weight: 900;
     text-shadow: 0.1em 0.1em 0.1em #000;
-}
-
-p {
-    font-size: 1.2em;
 }
 
 section:nth-of-type(1) {
@@ -87,7 +119,7 @@ section:nth-of-type(1) {
     height: 35em;
     display: flex;
     list-style: none;
-    background-color: black;
+    background-color: #000;
     overflow: scroll;
 }
 
@@ -100,8 +132,8 @@ section:nth-of-type(1) {
     margin: auto 1em auto 1em;
     padding: 0 1em 0 1em;
     text-align: end;
-    color: white;
-    text-shadow: 0.1em 0.1em 0.1em black;
+    color: #fff;
+    text-shadow: 0.1em 0.1em 0.1em #000;
     background-color: #f0c838;
     background-size: cover;
 
