--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 .introText {
-    width: 25em;
+    width: 35em;
     max-width: 100%;
     height: 100%;
 
@@ -77,12 +77,9 @@ h1 {
     font-weight: 900;
 }
 
-h2 {
-    margin: 0.5em 0 0 0;
-    color: #f0c838;
-    font-size: 2em;
-    font-weight: 900;
-    text-shadow: 0.1em 0.1em 0.1em #000;
+section:nth-of-type(1) h2 {
+    color: #000;
+    text-shadow: none;
 }
 
 section:nth-of-type(1) {
@@ -91,6 +88,14 @@ section:nth-of-type(1) {
 
     display: flex;
     justify-content: center;
+}
+
+h2 {
+    margin: 0.5em 0 0 0;
+    color: #f0c838;
+    font-size: 2em;
+    font-weight: 900;
+    text-shadow: 0.1em 0.1em 0.1em #000;
 }
 
 @keyframes scrolling {
