scrollbar, accessibility, loading state

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,12 +1,12 @@
+:root {
+    --main-color: #f0c838;
+}
+
 html,
 body,
 p,
 h2 {
     margin: 0;
-}
-
-html {
-    padding: 0;
 }
 
 main {
@@ -15,7 +15,7 @@ main {
 
 body {
     font-family: 'Overpass', 'Courier New', Courier, monospace;
-    background-color: #f0c838;
+    background-color: var(--main-color);
 }
 
 p {
@@ -50,18 +50,18 @@ p {
 
 .btn:hover {
     background-color: #000;
-    color: #f0c838;
+    color: var(--main-color);
     font-weight: 900;
 }
 
 .btn:focus {
     outline: solid #fff 0.4em;
     background-color: #000;
-    color: #f0c838;
+    color: var(--main-color);
     font-weight: 900;
 }
 
-img:first-of-type {
+#avatar_url {
     margin: auto 3em auto 0;
     width: 100%;
     max-width: 25em;
@@ -92,7 +92,7 @@ section:nth-of-type(1) {
 
 h2 {
     margin: 0.5em 0 0 0;
-    color: #f0c838;
+    color: var(--main-color);
     font-size: 2em;
     font-weight: 900;
     text-shadow: 0.1em 0.1em 0.1em #000;
@@ -118,24 +118,6 @@ h2 {
     background-repeat: repeat-x;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .perfPattern {
-        animation: scrolling 3s linear infinite;
-    }
-
-    .moviePoster {
-        transition: 0.3s;
-    }
-
-    .movieInfo {
-        transition: 0.3s;
-    }
-
-    .btn {
-        transition: 0.2s;
-    }
-}
-
 #movieListContainer {
     margin: 0;
     height: 35em;
@@ -143,6 +125,31 @@ h2 {
     list-style: none;
     background-color: #000;
     overflow: scroll;
+
+    scrollbar-color: var(--main-color) #000;
+    scrollbar-width: thin;
+}
+
+.filmStrip {
+    position: relative;
+}
+
+.loadingAnim {
+    width: 100%;
+}
+
+.loader {
+    position: absolute;
+    left: calc(50% - 10em / 2);
+    top: calc(50% - 10em / 2);
+    width: 10em;
+    height: 10em;
+    margin: auto;
+    z-index: 1;
+}
+
+.loader p {
+    color: var(--main-color);
 }
 
 .moviePoster {
@@ -152,7 +159,7 @@ h2 {
     text-align: end;
     color: #fff;
     text-shadow: 0.1em 0.1em 0.1em #000;
-    background-color: #f0c838;
+    background-color: var(--main-color);
     background-size: cover;
 
     border-radius: 1.2em;
@@ -161,12 +168,12 @@ h2 {
 
 .moviePoster:focus-visible {
     box-shadow: inset 0.1em 0.1em 1.5em #000, inset -0.1em -0.1em 1.5em #000;
-    outline: solid 0.5em #f0c838;
+    outline: solid 0.5em var(--main-color);
     outline-offset: -0.25em;
 }
 
 .moviePoster:hover {
-    outline: solid 0.3em #f0c838;
+    outline: solid 0.3em var(--main-color);
 }
 
 .regularPoster {
@@ -175,7 +182,11 @@ h2 {
 
 .extendedPoster {
     min-width: 31em;
-    outline: solid 0.3em #f0c838;
+    outline: solid 0.3em var(--main-color);
+}
+
+.remove {
+    visibility: hidden;
 }
 
 .hidden {
@@ -202,7 +213,7 @@ li p {
 
 #imdbRating {
     margin: 0;
-    color: #f0c838;
+    color: var(--main-color);
     font-size: 2em;
     font-weight: 900;
     text-shadow: 0.1em 0.1em 0.1em #0007;
@@ -224,7 +235,7 @@ footer {
         align-items: center;
     }
 
-    img:first-of-type {
+    #avatar_url {
         margin: 0 0 1em 0;
     }
 
@@ -250,5 +261,23 @@ footer {
 
     #imdbRating {
         font-size: 1.5em;
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .perfPattern {
+        animation: scrolling 3s linear infinite;
+    }
+
+    .moviePoster {
+        transition: 0.3s;
+    }
+
+    .movieInfo {
+        transition: 0.3s;
+    }
+
+    .btn {
+        transition: 0.2s;
     }
 }
